--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/additional-resources.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/additional-resources.html
@@ -1,6 +1,6 @@
 {{ with (.Site.GetPage "/qdrant-vector-database/additional-resources") }}
   <section class="additional-resources">
-    <div class="additional-resources__wrapper container">
+    <div class="container">
       <h2 class="additional-resources__title">{{ .Params.title }}</h2>
       <div class="additional-resources__cards row">
         {{ range .Params.resourceCards }}
