--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/hybrid-cloud-how-it-works.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/hybrid-cloud-how-it-works.html
@@ -1,6 +1,6 @@
 {{ with (.Site.GetPage "/hybrid-cloud/hybrid-cloud-how-it-works") }}
   <section class="hybrid-cloud-how-it-works">
-    <div class="hybrid-cloud-how-it-works__wrapper container">
+    <div class="container">
       <div class="row">
         <div class="hybrid-cloud-how-it-works__content col-12">
           <div class="row justify-content-xl-between">
