--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-vector-database-use-cases.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-vector-database-use-cases.html
@@ -1,6 +1,6 @@
 {{ with (.Site.GetPage "/qdrant-vector-database/qdrant-vector-database-use-cases") }}
   <section class="qdrant-vector-database-use-cases">
-    <div class="qdrant-vector-database-use-cases__wrapper container">
+    <div class="container">
       <div class="qdrant-vector-database-use-cases__cases row">
         {{ range $index, $element := .Params.items }}
           <div class="col-12">
