--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/testimonial.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/testimonial.html
@@ -1,6 +1,6 @@
 {{ with (.Site.GetPage "/enterprise-solutions/testimonial") }}
   <section class="testimonial">
-    <div class="testimonial__wrapper container">
+    <div class="container">
       <div class="testimonial__cards row">
         <div class="col-12 col-xl-9">
           <div class="testimonial__content">
