--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/enterprise-benefits.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/enterprise-benefits.html
@@ -1,19 +1,17 @@
 {{ with (.Site.GetPage "enterprise-solutions/enterprise-benefits") }}
   <section class="enterprise-benefits">
-    <div class="enterprise-benefits__wrapper container">
+    <div class="enterprise-benefits container">
       <h2 class="enterprise-benefits__title">{{ .Params.title }}</h2>
-      <div class="col-12">
-        <div class="enterprise-benefits__cards row">
-          {{ range $index, $element := .Params.cards }}
-            <div class="enterprise-benefits__card col-12 col-xl-6">
-              <div class="enterprise-benefits__card-info card">
-                <img class="enterprise-benefits__card-icon" src="{{ .icon.src }}" alt="{{ .icon.alt }}" />
-                <h5 class="enterprise-benefits__card-title">{{ .title }}</h5>
-                <p class="enterprise-benefits__card-description">{{ .description }}</p>
-              </div>
+      <div class="enterprise-benefits__cards row">
+        {{ range $index, $element := .Params.cards }}
+          <div class="enterprise-benefits__card col-12 col-xl-6">
+            <div class="enterprise-benefits__card-info card">
+              <img class="enterprise-benefits__card-icon" src="{{ .icon.src }}" alt="{{ .icon.alt }}" />
+              <h5 class="enterprise-benefits__card-title">{{ .title }}</h5>
+              <p class="enterprise-benefits__card-description">{{ .description }}</p>
             </div>
-          {{ end }}
-        </div>
+          </div>
+        {{ end }}
       </div>
     </div>
   </section>
