--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/enterprise-solutions-hero.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/enterprise-solutions-hero.html
@@ -1,6 +1,6 @@
 {{ with (.Site.GetPage "enterprise-solutions/enterprise-solutions-hero") }}
   <section class="enterprise-solutions-hero">
-    <div class="enterprise-solutions-hero__wrapper container">
+    <div class="container">
       <div class="row">
         <div class="col-12">
           <h3 class="enterprise-solutions-hero__title">{{ .Params.title }}</h3>
