--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/enterprise-solutions-use-cases.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/enterprise-solutions-use-cases.html
@@ -1,6 +1,6 @@
 {{ with (.Site.GetPage "enterprise-solutions/enterprise-solutions-use-cases") }}
   <section class="enterprise-solutions-use-cases">
-    <div class="enterprise-solutions-use-cases__wrapper container">
+    <div class="container">
       <h2 class="enterprise-solutions-use-cases__title">{{ .Params.title }}</h2>
       <div class="enterprise-solutions-use-cases__cases row">
         {{ range $index, $element := .Params.items }}
