--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/hybrid-cloud-cases.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/hybrid-cloud-cases.html
@@ -1,20 +1,16 @@
 {{ with (.Site.GetPage "/hybrid-cloud/hybrid-cloud-cases") }}
   <section class="hybrid-cloud-cases">
-    <div class="hybrid-cloud-cases__wrapper container">
-      <div class="row">
-        <div class="col-12">
-          <div class="hybrid-cloud-cases__cards row">
-            {{ range .Params.cards }}
-              <div class="col-12 col-xl-6">
-                <div class="card hybrid-cloud-cases__card">
-                  <img class="hybrid-cloud-cases__card-icon" src="{{ .icon.src }}" alt="{{ .icon.alt }}" />
-                  <h3 class="hybrid-cloud-cases__card-title">{{ .title }}</h3>
-                  <p class="hybrid-cloud-cases__card-description">{{ .description }}</p>
-                </div>
-              </div>
-            {{ end }}
+    <div class="container">
+      <div class="hybrid-cloud-cases__cards row">
+        {{ range .Params.cards }}
+          <div class="col-12 col-xl-6">
+            <div class="card hybrid-cloud-cases__card">
+              <img class="hybrid-cloud-cases__card-icon" src="{{ .icon.src }}" alt="{{ .icon.alt }}" />
+              <h3 class="hybrid-cloud-cases__card-title">{{ .title }}</h3>
+              <p class="hybrid-cloud-cases__card-description">{{ .description }}</p>
+            </div>
           </div>
-        </div>
+        {{ end }}
       </div>
     </div>
   </section>
