--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/get-contacted.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/get-contacted.html
@@ -1,5 +1,5 @@
 <section class="{{ .class }}">
-  <div class="{{ .class }}__wrapper container">
+  <div class="container">
     <div class="{{ .class }}__content col-12">
       <p>{{ .context.Params.content }}</p>
       <a
