--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/private-cloud-about.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/private-cloud-about.html
@@ -1,6 +1,6 @@
 {{ with (.Site.GetPage "/private-cloud/private-cloud-about") }}
   <section class="private-cloud-about">
-    <div class="private-cloud-about__wrapper container">
+    <div class="container">
       <div class="row">
         <div class="private-cloud-about__content col-12">
           <h6 class="private-cloud-about__title">{{ .Params.title }}</h6>
