--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/private-cloud-hero.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/private-cloud-hero.html
@@ -1,6 +1,6 @@
 {{ with (.Site.GetPage "/private-cloud/private-cloud-hero") }}
   <section class="private-cloud-hero">
-    <div class="private-cloud-hero__wrapper container">
+    <div class="container">
       <div class="row justify-content-xl-between align-items-xl-end">
         <div class="col-12 col-xl-6">
           <h3 class="private-cloud-hero__title">{{ .Params.title }}</h3>
