--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-cloud-features-link.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-cloud-features-link.html
@@ -1,6 +1,6 @@
 {{ with (.Site.GetPage "/qdrant-cloud/qdrant-cloud-features-link") }}
   <section class="qdrant-cloud-features-link">
-    <div class="qdrant-cloud-features-link__wrapper container">
+    <div class="container">
       <h6 class="qdrant-cloud-features-link__content">{{ .Params.content }}</h6>
       <a class="qdrant-cloud-features-link__link link link_xl" href="{{ .Params.link.url }}">
         {{ .Params.link.text }}
