--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-cloud-hero.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-cloud-hero.html
@@ -1,6 +1,6 @@
 {{ with (.Site.GetPage "/qdrant-cloud/qdrant-cloud-hero") }}
   <section class="qdrant-cloud-hero">
-    <div class="qdrant-cloud-hero__wrapper container">
+    <div class="container">
       <div class="row">
         <div class="col-12">
           <h3 class="qdrant-cloud-hero__title">{{ .Params.title }}</h3>
