--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-cloud-hero.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-cloud-hero.scss
@@ -5,10 +5,7 @@
   padding-bottom: $spacer * 5;
   position: relative;
   overflow: hidden;
-
-  &__wrapper {
-    text-align: center;
-  }
+  text-align: center;
 
   &__title {
     font-size: $spacer * 2.5;
@@ -62,6 +59,7 @@
 
   &__video {
     position: relative;
+    z-index: 1;
 
     video {
       width: 100%;
@@ -99,10 +97,6 @@
 
   @include media-breakpoint-up(xl) {
     padding-top: $spacer * 3.5;
-
-    &__wrapper {
-      max-width: rem(1134);
-    }
 
     &__title {
       font-size: $spacer * 4;
