--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/get-started-small.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/get-started-small.html
@@ -1,5 +1,5 @@
 <section class="{{ .class }}">
-  <div class="{{ .class }}__wrapper container">
+  <div class="container">
     <div class="{{ .class }}__content col-12">
       <div class="row justify-content-xl-between align-items-xl-center">
         <div class="{{ .class }}__text col-12 col-xl-7">
