--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-cloud-bento-cards.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-cloud-bento-cards.html
@@ -1,6 +1,6 @@
 {{ with (.Site.GetPage "/qdrant-cloud/qdrant-cloud-bento-cards") }}
   <section class="qdrant-cloud-bento-cards">
-    <div class="qdrant-cloud-bento-cards__wrapper container">
+    <div class="container">
       <div class="qdrant-cloud-bento-cards__cards row">
         {{ range $index, $element := .Params.items }}
           <div class="col-12">
