add qdrant cloud page (#767)
* add qdrant cloud page

* add new blocks and refactor

* fix

* fix

* delete wrapper

--- a/qdrant-landing/themes/qdrant-2024/layouts/enterprise-solutions/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/enterprise-solutions/baseof.html
@@ -15,4 +15,5 @@
 {{ partial "enterprise-benefits" . }}
 {{ partial "get-contacted" . }}
 {{ partial "get-started" . }}
+{{ partial "customer-list" . }}
 {{ partial "footer" . }}
