--- a/qdrant-landing/themes/qdrant-2024/layouts/qdrant-cloud/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/qdrant-cloud/baseof.html
@@ -6,13 +6,14 @@
     {{ partial "top-banner" . }}
     {{ partial "menu" . }}
     {{ partial "menu-mobile" . }}
-    {{ partial "qdrant-vector-database-hero" . }}
+    {{ partial "qdrant-cloud-hero" . }}
   </header>
 </main>
 
-{{ partial "qdrant-vector-database-use-cases" . }}
-{{ partial "feature-overview" . }}
-{{ partial "get-started-small-rocket" . }}
+{{ partial "get-started-small-database" . }}
+{{ partial "qdrant-cloud-bento-cards" . }}
+{{ partial "qdrant-cloud-features-link" . }}
+{{ partial "marketplaces" . }}
 {{ partial "additional-resources" . }}
 {{ partial "get-started" . }}
 {{ partial "footer" . }}
