--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -22,13 +22,19 @@
 @import 'partials/feature-overview';
 @import 'partials/qdrant-vector-database-hero';
 @import 'partials/qdrant-vector-database-use-cases';
-@import 'partials/get-started-small';
+@import 'partials/get-started-small-rocket';
+@import 'partials/get-started-small-database';
 @import 'partials/enterprise-solutions-hero';
 @import 'partials/enterprise-solutions-use-cases';
 @import 'partials/testimonial';
 @import 'partials/get-contacted';
 @import 'partials/enterprise-benefits';
 @import 'partials/top-and-bottom-overlay';
+@import 'partials/qdrant-cloud-hero';
+@import 'partials/qdrant-cloud-bento-cards';
+@import 'partials/marketplaces';
+@import 'partials/qdrant-cloud-features-link';
+@import 'partials/customer-list';
 @import 'partials/demos';
 @import 'partials/tutorials';
 
