add hybrid cloud page (#769)
* add hybrid cloud page

* fix

* delete wrapper

* run format

---------

Co-authored-by: trean <trean.mi@gmail.com>

--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -30,6 +30,11 @@
 @import 'partials/get-contacted';
 @import 'partials/enterprise-benefits';
 @import 'partials/top-and-bottom-overlay';
+@import 'partials/hybrid-cloud-hero';
+@import 'partials/hybrid-cloud-kubernetes-clusters';
+@import 'partials/hybrid-cloud-cases';
+@import 'partials/hybrid-cloud-how-it-works';
+@import 'partials/hybrid-cloud-features';
 @import 'partials/qdrant-cloud-hero';
 @import 'partials/qdrant-cloud-bento-cards';
 @import 'partials/marketplaces';
