--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_enterprise-solutions-use-cases.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_enterprise-solutions-use-cases.scss
@@ -6,14 +6,11 @@
   padding-top: $spacer * 3;
   padding-bottom: $spacer * 3;
 
-  &__wrapper {
-    justify-content: center;
-  }
-
   &__title {
     margin-bottom: $spacer * 5;
     font-size: $spacer * 2.5;
     line-height: $spacer * 3;
+    color: $neutral-20;
     text-align: center;
   }
 
@@ -34,12 +31,14 @@
       font-size: $spacer * 2;
       line-height: rem(38);
       margin-bottom: $spacer * 1.5;
+      color: $neutral-20;
     }
 
     &-description {
       font-size: $spacer;
       line-height: $spacer * 1.5;
       margin-bottom: $spacer * 1.5;
+      color: $neutral-40;
     }
 
     &-preview {
@@ -52,10 +51,6 @@
   @include media-breakpoint-up(xl) {
     padding-top: $spacer * 7.5;
     padding-bottom: $spacer * 10;
-
-    &__wrapper {
-      max-width: rem(1134);
-    }
 
     &__title {
       margin-bottom: $spacer * 7.5;
