--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/enterprise-solutions-use-cases.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/enterprise-solutions-use-cases.html
@@ -1,6 +1,6 @@
 {{ with (.Site.GetPage "enterprise-solutions/enterprise-solutions-use-cases") }}
   <section class="enterprise-solutions-use-cases">
-    <div class="enterprise-solutions-use-cases__wrapper container">
+    <div class="container">
       <h2 class="enterprise-solutions-use-cases__title">{{ .Params.title }}</h2>
       <div class="enterprise-solutions-use-cases__cases row">
         {{ range $index, $element := .Params.items }}
@@ -9,7 +9,7 @@
               <div class="enterprise-solutions-use-cases__case-text col-12 col-xl-5">
                 <h3 class="enterprise-solutions-use-cases__case-title">{{ .title }}</h3>
                 <p class="enterprise-solutions-use-cases__case-description">{{ .description }}</p>
-                <a class="link link_light link_md align-self-start" href="{{ .link.url }}">{{ .link.text }}</a>
+                <a class="link link_md align-self-start" href="{{ .link.url }}">{{ .link.text }}</a>
               </div>
               <div class="enterprise-solutions-use-cases__case-preview col-12 col-xl-6">
                 <img src="{{ .image.src }}" alt="{{ .image.alt }}" />
