add private cloud page (#773)
* add private cloud page

* delete wrapper

--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -27,9 +27,12 @@
 @import 'partials/enterprise-solutions-hero';
 @import 'partials/enterprise-solutions-use-cases';
 @import 'partials/testimonial';
-@import 'partials/get-contacted';
 @import 'partials/enterprise-benefits';
 @import 'partials/top-and-bottom-overlay';
+@import 'partials/get-contacted-with-question';
+@import 'partials/private-cloud-hero';
+@import 'partials/private-cloud-about';
+@import 'partials/private-cloud-get-contacted';
 @import 'partials/hybrid-cloud-hero';
 @import 'partials/hybrid-cloud-kubernetes-clusters';
 @import 'partials/hybrid-cloud-cases';
