--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/get-contacted.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/get-contacted.html
@@ -1,15 +1,16 @@
-{{ with (.Site.GetPage "/headless/get-contacted") }}
-  <section class="get-contacted">
-    <div class="get-contacted__wrapper container">
-      <div class="get-contacted__content col-12">
-        <p>{{ .Params.content }}</p>
-        <a href="{{ .Params.contactUs.url }}" class="get-contacted__button-mobile button button_outlined button_lg">
-          {{ .Params.contactUs.text }}
-        </a>
-        <a href="{{ .Params.contactUs.url }}" class="get-contacted__button button button_contained">
-          {{ .Params.contactUs.text }}
-        </a>
-      </div>
+<section class="{{ .class }}">
+  <div class="container">
+    <div class="{{ .class }}__content col-12">
+      <p>{{ .context.Params.content }}</p>
+      <a
+        href="{{ .context.Params.contactUs.url }}"
+        class="{{ .class }}__button-mobile button button_outlined button_lg"
+      >
+        {{ .context.Params.contactUs.text }}
+      </a>
+      <a href="{{ .context.Params.contactUs.url }}" class="{{ .class }}__button button button_contained">
+        {{ .context.Params.contactUs.text }}
+      </a>
     </div>
-  </section>
-{{ end }}
+  </div>
+</section>
