add and fix some blocks

--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_pricing-door.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_pricing-door.scss
@@ -3,6 +3,7 @@
 .pricing-door {
   position: relative;
   height: 100%;
+  width: 100%;
   padding: rem(47) $spacer * 2 $spacer * 3 $spacer * 2;
   border-radius: rem(12);
   border-top: rem(1) solid $neutral-40;
