--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -34,6 +34,7 @@
 @import 'partials/qdrant-pricing-docker';
 @import 'partials/qdrant-pricing-doors-a';
 @import 'partials/qdrant-pricing-doors-b';
+@import 'partials/qdrant-pricing-marketplaces';
 @import 'partials/pricing-door';
 @import 'partials/get-contacted-with-question';
 @import 'partials/private-cloud-hero';
@@ -46,7 +47,8 @@
 @import 'partials/hybrid-cloud-features';
 @import 'partials/qdrant-cloud-hero';
 @import 'partials/qdrant-cloud-bento-cards';
-@import 'partials/marketplaces';
+@import 'partials/qdrant-cloud-marketplaces';
+@import 'partials/qdrant-pricing-get-contacted';
 @import 'partials/qdrant-cloud-features-link';
 @import 'partials/customer-list';
 @import 'partials/demos';
