--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-pricing-doors-a.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-pricing-doors-a.html
@@ -1,9 +1,9 @@
 {{ with (.Site.GetPage "/qdrant-pricing/qdrant-pricing-doors-a") }}
   <section class="qdrant-pricing-doors-a">
     <div class="container">
-      <div class="qdrant-pricing-doors-a__doors row">
+      <div class="qdrant-pricing-doors-a__doors">
         {{ range $index, $element := .Params.cards }}
-          <div class="qdrant-pricing-doors-a__door col-12 col-xl-4">
+          <div class="qdrant-pricing-doors-a__door">
             {{ partial "pricing-door" (dict "context" .) }}
           </div>
         {{ end }}
