--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-pricing-doors-b.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-pricing-doors-b.html
@@ -1,9 +1,9 @@
 {{ with (.Site.GetPage "/qdrant-pricing/qdrant-pricing-doors-b") }}
   <section class="qdrant-pricing-doors-b">
     <div class="container">
-      <div class="qdrant-pricing-doors-b__doors row">
+      <div class="qdrant-pricing-doors-b__doors">
         {{ range $index, $element := .Params.cards }}
-          <div class="qdrant-pricing-doors-b__door col-12 col-xl-4">
+          <div class="qdrant-pricing-doors-b__door">
             {{ partial "pricing-door" (dict "context" .) }}
           </div>
         {{ end }}
