add leadership section

--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_carousel.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_carousel.scss
@@ -28,4 +28,8 @@
     background-position: center;
     background-size: contain;
   }
+
+  @include media-breakpoint-up(xl) {
+    padding-bottom: $spacer * 5;
+  }
 }
