add investors section

--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -34,6 +34,7 @@
 @import 'partials/carousel';
 @import 'partials/leadership';
 @import 'partials/open-roles';
+@import 'partials/investors';
 
 .main-header {
   background: $neutral-10;
