--- a/qdrant-landing/themes/qdrant-2024/layouts/about-us/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/about-us/baseof.html
@@ -11,5 +11,6 @@
 
 {{ partial "carousel" . }}
 {{ partial "leadership" . }}
+{{ partial "investors" . }}
 {{ partial "open-roles" . }}
 {{ partial "footer" . }}
