--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_private-cloud-about.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_private-cloud-about.scss
@@ -21,7 +21,7 @@
   }
 
   @include media-breakpoint-up(xl) {
-    padding-bottom: 0;
+    padding-bottom: $spacer;
 
     &__content {
       position: relative;
