--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/enterprise-benefits.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/enterprise-benefits.html
@@ -1,6 +1,6 @@
 {{ with (.Site.GetPage "enterprise-solutions/enterprise-benefits") }}
   <section class="enterprise-benefits">
-    <div class="enterprise-benefits container">
+    <div class="container">
       <h2 class="enterprise-benefits__title">{{ .Params.title }}</h2>
       <div class="enterprise-benefits__cards row">
         {{ range $index, $element := .Params.cards }}
