--- a/qdrant-landing/themes/qdrant-2024/layouts/private-cloud/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/private-cloud/baseof.html
@@ -11,5 +11,6 @@
 
 {{ partial "private-cloud-hero" . }}
 {{ partial "private-cloud-about" . }}
+{{ partial "customer-list" . }}
 {{ partial "private-cloud-get-contacted" . }}
 {{ partial "footer" . }}
