--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_hybrid-cloud-cases.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_hybrid-cloud-cases.scss
@@ -5,6 +5,7 @@
   background-color: $neutral-94;
 
   &__cards {
+    display: flex;
     flex-direction: column;
     gap: $spacer * 2;
   }
@@ -39,17 +40,18 @@
     &__cards {
       flex-direction: row;
       justify-content: space-between;
-      column-gap: 0;
+      flex-wrap: wrap;
+      gap: rem(30);
 
       & > div:nth-of-type(1),
       & > div:nth-of-type(2) {
-        width: calc(50% - 3px);
+        width: calc(50% - 15px);
       }
 
       & > div:nth-of-type(3),
       & > div:nth-of-type(4),
       & > div:nth-of-type(5) {
-        width: calc((100% / 3) - 4px);
+        width: calc((100% / 3) - 20px);
       }
     }
 
