--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-vector-database-use-cases.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-vector-database-use-cases.scss
@@ -7,6 +7,8 @@
   padding-bottom: $spacer * 4;
 
   &__cases {
+    display: flex;
+    flex-direction: column;
     gap: $spacer * 5;
   }
 
@@ -38,6 +40,16 @@
       img {
         width: 100%;
       }
+    }
+
+    &:nth-of-type(1) img {
+      margin-left: -4%;
+      width: 104%;
+    }
+
+    &:nth-of-type(2) img {
+      margin-left: -5%;
+      width: 105%;
     }
   }
 
@@ -72,7 +84,6 @@
       }
 
       &-preview {
-        width: rem(564);
         height: rem(360);
         padding-bottom: 0;
       }
