--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/enterprise-solutions-use-cases.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/enterprise-solutions-use-cases.html
@@ -5,13 +5,17 @@
       <div class="enterprise-solutions-use-cases__cases row">
         {{ range $index, $element := .Params.items }}
           <div class="col-12">
-            <div class="row enterprise-solutions-use-cases__case {{ if mod $index 2 | eq 1 }}case-reversed{{ end }}">
-              <div class="enterprise-solutions-use-cases__case-text col-12 col-xl-5">
+            <div class="enterprise-solutions-use-cases__case {{ if mod $index 2 | eq 1 }}case-reversed{{ end }}">
+              <div class="enterprise-solutions-use-cases__case-text">
                 <h3 class="enterprise-solutions-use-cases__case-title">{{ .title }}</h3>
                 <p class="enterprise-solutions-use-cases__case-description">{{ .description }}</p>
-                <a class="link link_md align-self-start" href="{{ .link.url }}">{{ .link.text }}</a>
+                <a
+                  class="enterprise-solutions-use-cases__case-link link link_md align-self-start"
+                  href="{{ .link.url }}">
+                  {{ .link.text }}
+                </a>
               </div>
-              <div class="enterprise-solutions-use-cases__case-preview col-12 col-xl-6">
+              <div class="enterprise-solutions-use-cases__case-preview">
                 <img src="{{ .image.src }}" alt="{{ .image.alt }}" />
               </div>
             </div>
