--- a/qdrant-landing/themes/qdrant-2024/layouts/index.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/index.html
@@ -16,7 +16,10 @@
       {{ partial "core-features" . }}
       {{ partial "customer-stories" . }}
       {{ partial "integrations" . }}
-      {{ partial "docker-deploy" . }}
+
+      {{ with (.Site.GetPage "/headless/main/docker-deploy") }}
+        {{ partial "docker-deploy" (dict "context" . "class" "") }}
+      {{ end }}
 
       {{ with (.Site.GetPage "/headless/main/vectors") }}
         {{ partial "vectors" . }}
