--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/docker-deploy.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/docker-deploy.html
@@ -1,33 +1,31 @@
-{{ with (.Site.GetPage "/headless/main/docker-deploy") }}
-  <section class="docker-deploy">
-    <div class="container">
-      <div class="docker-deploy__content row">
-        <div class="col-12 col-xl-5">
-          <div class="docker-deploy__description">
-            <h3 class="docker-deploy__title">{{ .Params.title }}</h3>
-            <p class="docker-deploy__subtitle">
-              Get started with our
-              <a class="docker-deploy__link" href="{{ .Params.quickStartLink.url }}"
-                >{{ .Params.quickStartLink.text }}</a
-              >, or our main
-              <a class="docker-deploy__link" href="{{ .Params.repositoryLink.url }}"
-                >{{ .Params.repositoryLink.text }}</a
-              >.
-            </p>
-          </div>
+<section class="docker-deploy{{ .class }}">
+  <div class="container">
+    <div class="docker-deploy__content row">
+      <div class="col-12 col-xl-5">
+        <div class="docker-deploy__description">
+          <h3 class="docker-deploy__title">{{ .context.Params.title }}</h3>
+          <p class="docker-deploy__subtitle">
+            Get started with our
+            <a class="docker-deploy__link" href="{{ .context.Params.quickStartLink.url }}"
+              >{{ .context.Params.quickStartLink.text }}</a
+            >, or our main
+            <a class="docker-deploy__link" href="{{ .context.Params.repositoryLink.url }}"
+              >{{ .context.Params.repositoryLink.text }}</a
+            >.
+          </p>
         </div>
-        <div class="col-12 col-xl-7">
-          <div class="docker-deploy__preview">
-            <div class="docker-deploy__image" style="background-image: url(/img/docker-illustration.png)">
-              <code>
-                {{ range $index, $command := .Params.commands }}
-                  <span class="no-copy">{{ add $index 1 }}&nbsp;</span>{{ $command | safeHTML }}<br />
-                {{ end }}
-              </code>
-            </div>
+      </div>
+      <div class="col-12 col-xl-7">
+        <div class="docker-deploy__preview">
+          <div class="docker-deploy__image" style="background-image: url(/img/docker-illustration.png)">
+            <code>
+              {{ range $index, $command := .context.Params.commands }}
+                <span class="no-copy">{{ add $index 1 }}&nbsp;</span>{{ $command | safeHTML }}<br />
+              {{ end }}
+            </code>
           </div>
         </div>
       </div>
     </div>
-  </section>
-{{ end }}
+  </div>
+</section>
