add pricing page (#777)
* add pricing page

* add and fix some blocks

* fix

* delete empty file

* fix

--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -29,6 +29,13 @@
 @import 'partials/testimonial';
 @import 'partials/enterprise-benefits';
 @import 'partials/top-and-bottom-overlay';
+@import 'partials/qdrant-pricing-hero';
+@import 'partials/qdrant-pricing-calculator';
+@import 'partials/qdrant-pricing-docker-deploy';
+@import 'partials/qdrant-pricing-doors-a';
+@import 'partials/qdrant-pricing-doors-b';
+@import 'partials/qdrant-pricing-marketplaces';
+@import 'partials/pricing-door';
 @import 'partials/get-contacted-with-question';
 @import 'partials/private-cloud-hero';
 @import 'partials/private-cloud-about';
@@ -40,7 +47,8 @@
 @import 'partials/hybrid-cloud-features';
 @import 'partials/qdrant-cloud-hero';
 @import 'partials/qdrant-cloud-bento-cards';
-@import 'partials/marketplaces';
+@import 'partials/qdrant-cloud-marketplaces';
+@import 'partials/qdrant-pricing-get-contacted';
 @import 'partials/qdrant-cloud-features-link';
 @import 'partials/customer-list';
 @import 'partials/demos';
