finished Hybrid-Cloud page and improved other pages (#782)

--- a/qdrant-landing/themes/qdrant-2024/layouts/private-cloud/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/private-cloud/baseof.html
@@ -11,6 +11,7 @@
 
 {{ partial "private-cloud-hero" . }}
 {{ partial "private-cloud-about" . }}
+{{ partial "customer-list" . }}
 
 {{ with (.Site.GetPage "/private-cloud/private-cloud-get-contacted") }}
   {{ partial "get-contacted" (dict "context" . "class" "private-cloud-get-contacted") }}
