--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -45,11 +45,15 @@
 @import 'partials/hybrid-cloud-cases';
 @import 'partials/hybrid-cloud-how-it-works';
 @import 'partials/hybrid-cloud-features';
+@import 'partials/hybrid-cloud-video';
+@import 'partials/hybrid-cloud-get-contacted';
+@import 'partials/hybrid-cloud-partners';
 @import 'partials/qdrant-cloud-hero';
 @import 'partials/qdrant-cloud-bento-cards';
 @import 'partials/qdrant-cloud-marketplaces';
 @import 'partials/qdrant-pricing-get-contacted';
 @import 'partials/qdrant-cloud-features-link';
+@import 'partials/video';
 @import 'partials/customer-list';
 @import 'partials/demos';
 @import 'partials/tutorials';
