--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -24,6 +24,7 @@
 @import 'partials/qdrant-vector-database-use-cases';
 @import 'partials/get-started-small-rocket';
 @import 'partials/get-started-small-database';
+@import 'partials/get-started-blogs';
 @import 'partials/enterprise-solutions-hero';
 @import 'partials/enterprise-solutions-use-cases';
 @import 'partials/testimonial';
@@ -57,6 +58,11 @@
 @import 'partials/customer-list';
 @import 'partials/demos';
 @import 'partials/tutorials';
+@import 'partials/qdrant-blog-features';
+@import 'partials/qdrant-blog-posts';
+@import 'partials/qdrant-blog-hero';
+@import 'partials/pagination';
+@import 'partials/newsletter';
 
 .main-header {
   background: $neutral-10;
