--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/enterprise-solutions-use-cases.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/enterprise-solutions-use-cases.html
@@ -11,7 +11,8 @@
                 <p class="enterprise-solutions-use-cases__case-description">{{ .description }}</p>
                 <a
                   class="enterprise-solutions-use-cases__case-link link link_md align-self-start"
-                  href="{{ .link.url }}">
+                  href="{{ .link.url }}"
+                >
                   {{ .link.text }}
                 </a>
               </div>
