--- a/qdrant-landing/themes/qdrant-2024/assets/css/_components.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/_components.scss
@@ -1,3 +1,5 @@
 @import 'components/buttons';
 @import 'components/card';
+@import 'components/input';
+@import 'components/post';
 @import 'components/utilites';
