--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_get-started-small-rocket.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_get-started-small-rocket.scss
@@ -6,6 +6,7 @@
     $spacer * 1.5,
     $spacer * 7.5,
     $spacer * 2.5,
+    $neutral-94,
     linear-gradient($neutral-20, #0e1424),
     linear-gradient(to left, $neutral-20, #0e1424)
   );
