--- a/qdrant-landing/themes/qdrant-2024/layouts/hybrid-cloud/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/hybrid-cloud/baseof.html
@@ -14,7 +14,11 @@
 {{ partial "hybrid-cloud-cases" . }}
 {{ partial "hybrid-cloud-how-it-works" . }}
 {{ partial "hybrid-cloud-video" . }}
-{{ partial "get-started-small-database" . }}
+
+{{ with (.Site.GetPage "/headless/get-started-small-database") }}
+  {{ partial "get-started-small" (dict "context" . "class" "get-started-small-database") }}
+{{ end }}
+
 {{ partial "hybrid-cloud-features" . }}
 {{ partial "hybrid-cloud-partners" . }}
 
