--- a/qdrant-landing/themes/qdrant-2024/layouts/qdrant-cloud/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/qdrant-cloud/baseof.html
@@ -10,7 +10,10 @@
   </header>
 </main>
 
-{{ partial "get-started-small-database" . }}
+{{ with (.Site.GetPage "/headless/get-started-small-database") }}
+  {{ partial "get-started-small" (dict "context" . "class" "get-started-small-database") }}
+{{ end }}
+
 {{ partial "qdrant-cloud-bento-cards" . }}
 {{ partial "qdrant-cloud-features-link" . }}
 
