--- a/qdrant-landing/themes/qdrant-2024/layouts/qdrant-pricing/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/qdrant-pricing/baseof.html
@@ -20,7 +20,10 @@
 {{ end }}
 
 {{ partial "qdrant-pricing-calculator" . }}
-{{ partial "get-started-small-database" . }}
+
+{{ with (.Site.GetPage "/headless/get-started-small-database") }}
+  {{ partial "get-started-small" (dict "context" . "class" "get-started-small-database") }}
+{{ end }}
 
 {{ with (.Site.GetPage "/headless/marketplaces") }}
   {{ partial "marketplaces" (dict "context" . "class" "qdrant-pricing-marketplaces") }}
